add all the information and code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 ---
 layout: home
-# Index page
+# Homepage layout by Chirpy
 ---
+
+Welcome to **CyberSafe** — a simple, friendly guide to help everyone stay safe online.
+
+🧠 **Learn the basics**  
+⚠️ **Understand real threats**  
+🛡️ **Protect yourself with easy steps**  
+🎯 **Test your knowledge with a quick quiz**
+
+This site is designed for **students, beginners, and anyone** who wants simple, clear cybersecurity knowledge.
